@startuml

title __PRACA KONCOWA's Class Diagram__\n

  namespace com.company {
    class com.company.Client {
    }
  }
  

  namespace com.company {
    class com.company.Main {
    }
  }
  

  namespace com.company {
    class com.company.Product {
    }
  }
  

  namespace com.company {
    class com.company.Store {
    }
  }
  

  namespace com.company {
    class com.company.person {
    }
  }
  

  namespace com.company {
    interface com.company.person1 {
    }
  }
  

  com.company.Client -up-|> com.company.person
  com.company.Client o-- com.company.Store.Cart : cart
  com.company.Client o-- com.company.Store : s
  com.company.person .up.|> com.company.person1


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
